--- a/pom.xml
+++ b/pom.xml
@@ -43,18 +43,46 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
+
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.zookeeper</groupId>
+                    <artifactId>zookeper</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                </exclusion>
+            </exclusions>
+
         </dependency>
+
         <dependency>
-                       <groupId>org.mule.connectors</groupId>
-                       <artifactId>mule-objectstore-connector</artifactId>
-                       <version>0.9.0-SNAPSHOT</version>
-                      <classifier>mule-plugin</classifier>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.10</version>
         </dependency>
+
         <dependency>
-			<groupId>net.sf.dozer</groupId>
-			<artifactId>dozer</artifactId>
-			<version>5.5.1</version>
-		</dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.mule.connectors</groupId>
+            <artifactId>mule-objectstore-connector</artifactId>
+            <version>0.9.0-SNAPSHOT</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.5.1</version>
+        </dependency>
 
     </dependencies>
 
@@ -73,21 +101,21 @@
         </plugins>
     </build>
     <repositories>
-		<repository>
-			<id>mulesoft-ee-releases</id>
-			<name>MuleSoft Releases Repository</name>
-			<url>https://repository.mulesoft.org/releases/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>mulesoft-snapshots</id>
-			<name>MuleSoft Snapshots Repository</name>
-			<url>https://repository.mulesoft.org/snapshots/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
+        <repository>
+            <id>mulesoft-ee-releases</id>
+            <name>MuleSoft Releases Repository</name>
+            <url>https://repository.mulesoft.org/releases/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>mulesoft-snapshots</id>
+            <name>MuleSoft Snapshots Repository</name>
+            <url>https://repository.mulesoft.org/snapshots/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 
-	<distributionManagement>
+    <distributionManagement>
         <repository>
             <id>mule-ee-releases</id>
             <name>MuleEE Releases Repository</name>
@@ -110,12 +138,16 @@
                 <repository>
                     <id>maven-facade-devx</id>
                     <name>Mozart Dev Environment</name>
-                    <url>https://maven.devx.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven</url>
+                    <url>
+                        https://maven.devx.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven
+                    </url>
                 </repository>
                 <snapshotRepository>
                     <id>maven-facade-devx</id>
                     <name>Mozart Dev Environment</name>
-                    <url>https://maven.devx.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven</url>
+                    <url>
+                        https://maven.devx.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven
+                    </url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
@@ -129,12 +161,16 @@
                 <repository>
                     <id>maven-facade-qax</id>
                     <name>Mozart QA Environment</name>
-                    <url>https://maven.qax.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven</url>
+                    <url>
+                        https://maven.qax.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven
+                    </url>
                 </repository>
                 <snapshotRepository>
                     <id>maven-facade-qax</id>
                     <name>Mozart Dev Environment</name>
-                    <url>https://maven.qax.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven</url>
+                    <url>
+                        https://maven.qax.anypoint.mulesoft.com/api/v1/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven
+                    </url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
@@ -148,12 +184,16 @@
                 <repository>
                     <id>maven-facade-stgx</id>
                     <name>Mozart STGX Environment</name>
-                    <url>https://maven.stgx.anypoint.mulesoft.com/api/v1/organizations/b2fd6061-9225-4f03-8ed9-2f3bf95acf41/maven</url>
+                    <url>
+                        https://maven.stgx.anypoint.mulesoft.com/api/v1/organizations/b2fd6061-9225-4f03-8ed9-2f3bf95acf41/maven
+                    </url>
                 </repository>
                 <snapshotRepository>
                     <id>maven-facade-stgx</id>
                     <name>Mozart STGX Environment</name>
-                    <url>https://maven.stgx.anypoint.mulesoft.com/api/v1/organizations/b2fd6061-9225-4f03-8ed9-2f3bf95acf41/maven</url>
+                    <url>
+                        https://maven.stgx.anypoint.mulesoft.com/api/v1/organizations/b2fd6061-9225-4f03-8ed9-2f3bf95acf41/maven
+                    </url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
@@ -172,5 +212,5 @@
         <url>https://github.com/mulesoft/hdfs-connector</url>
     </scm>
 
- 
+
 </project>
